# mngr

./: .dockerignore  .gitattributes  .gitignore  .offload-acceptance-cache-key  .offload-base-commit  .offload-cache-key  .offload-image-cache  .offload-release-cache-key  .pre-commit-config.yaml  .test_durations  .test_env  CHANGELOG.md  CLAUDE.md  LICENSE  PROBLEM.md  README.md  UNABRIDGED_CHANGELOG.md  benchmark_branches.sh  build_sandbox_image.py  conftest.py  depot.json  justfile  next.md  offload-history-modal.jsonl  offload-modal-acceptance.toml  offload-modal-release.toml  offload-modal.toml  pyproject.toml  style_guide.md  test_meta_ratchets.py  test_profiles.toml
apps/changelings/: README.md  pyproject.toml  style_guide.md
apps/changelings/docs/: design.md  remove-mng-list-json-fallback.md  user_story.md
apps/changelings/examples/hello-world/: server.py
apps/changelings/imbue/changelings/: README.md  conftest.py  errors.py  main.py  main_test.py  primitives.py  test_changeling_end_to_end.py  test_ratchets.py  testing.py
apps/changelings/scripts/: demo_forwarding_server.py
apps/claude_web_chat/: .gitignore  README.md  conftest.py  pyproject.toml
apps/claude_web_chat/frontend/: .prettierrc  package-lock.json  tsconfig.json  vite.config.ts
apps/claude_web_chat/frontend/src/: base-path.ts  index.ts  llm-api.ts  markdown.ts  navigation.ts  slots.ts  style.css
apps/claude_web_chat/imbue/claude_web_chat/: agent_discovery.py  agent_discovery_test.py  config.py  config_test.py  event_queues.py  event_queues_test.py  hookspecs.py  main.py  main_test.py  plugins.py  server.py  server_test.py  session_parser.py  session_parser_test.py  session_watcher.py  session_watcher_test.py  test_e2e.py  test_ratchets.py
apps/claude_web_view/: pyproject.toml
apps/claude_web_view/imbue/claude_web_view/: parser.py
apps/minds/: .gitignore  README.md  conftest.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  style_guide.md  test_desktop_client_e2e.py  test_forwarding_server_e2e.py  test_sse_redirect.py  test_supertokens_auth_e2e.py  todesktop.json
apps/minds/docs/: design.md  desktop-app.md  host-pool-setup.md  latchkey-permissions.md  overview.md  remove-mng-list-json-fallback.md  security-boundaries-audit.md  user_story.md
apps/minds/docs/mind/: README.md  common_events.md  conversations.md  event_lifecycle.md  getting_started.md  glossary.md
apps/minds/docs/workspace/: README.md  getting_started.md  glossary.md
apps/minds/electron/: backend.js  env-setup.js  error.html  loading.html  main.js  paths.js  preload.js  shell.html  titlebar.html
apps/minds/electron/pyproject/: pyproject.toml
apps/minds/examples/hello-world/: server.py
apps/minds/imbue/minds/: README.md  bootstrap.py  bootstrap_test.py  claude_version_alignment_test.py  cli_entry.py  conftest.py  errors.py  main.py  main_test.py  primitives.py  test_claude_version_alignment.py  test_mind_end_to_end.py  test_ratchets.py  testing.py
apps/minds/scripts/: build.js  create_telegram_bot.py  demo_desktop_client.py  demo_forwarding_server.py  fetch_tailwind.sh  propagate_changes
apps/minds_workspace_server/: .gitignore  README.md  conftest.py  pyproject.toml
apps/minds_workspace_server/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/minds_workspace_server/frontend/src/: base-path.ts  hooks.ts  index.ts  lint-and-format.test.ts  llm-api.ts  navigation.ts  plugin-routes.ts  sidebar-items.ts  style.css
apps/minds_workspace_server/imbue/minds_workspace_server/: activity_state.py  activity_state_test.py  activity_watcher.py  activity_watcher_test.py  agent_discovery.py  agent_discovery_test.py  agent_manager.py  agent_manager_test.py  config.py  config_test.py  conftest.py  event_queues.py  event_queues_test.py  events.py  hookspecs.py  main.py  main_test.py  models.py  plugins.py  primitives.py  proxy.py  proxy_test.py  request_writer.py  request_writer_test.py  server.py  server_test.py  service_dispatcher.py  service_dispatcher_test.py  session_parser.py  session_parser_test.py  sharing_proxy.py  (+7 more)
apps/modal_litellm/: README.md  app.py  pyproject.toml  test_ratchets.py
apps/sculptor_web/: pyproject.toml
libs/concurrency_group/: conftest.py  pyproject.toml
libs/flexmux/: pyproject.toml
libs/imbue_common/: conftest.py  pyproject.toml
libs/imbue_common/examples/: ratchets_example.py
libs/llm_echo/: llm_echo.py  llm_echo_test.py  pyproject.toml  test_ratchets.py
libs/mng/: README.md  conftest.py  future_specs_triage.txt  llm_faq.md  pyproject.toml
libs/mng/analysis/: raw-types-2026-01-19.md
libs/mng/docs/: all_supported_agents.md  api.md  architecture.md  conventions.md  customization.md  future_work.md  principles.md  security_model.md  tmux_users.md
libs/mng/future_specs/: agent.md  config.md  error_handling.md  future_work.md  host.md  locking.md  logging.md  out_of_scope.md  plugins.md  provider_instance.md  provisioning.md
libs/mng/tutorials/: mega_tutorial.sh
libs/mng_changeling_chat/: pyproject.toml
libs/mng_claude_changeling/: README.md  conftest.py  pyproject.toml
libs/mng_claude_changeling/future_specs/: unified_settings_plan.md
libs/mng_claude_mind/: README.md  conftest.py  pyproject.toml
libs/mng_claude_zygote/: README.md  pyproject.toml
libs/mng_elena_code/: README.md  conftest.py  pyproject.toml
libs/mng_file/: README.md  conftest.py  pyproject.toml
libs/mng_kanpan/: README.md  conftest.py  pyproject.toml
libs/mng_llm/: README.md  conftest.py  pyproject.toml
libs/mng_modal/: README.md  conftest.py  pyproject.toml
libs/mng_notifications/: README.md  conftest.py  pyproject.toml
libs/mng_opencode/: README.md  conftest.py  pyproject.toml
libs/mng_pair/: README.md  conftest.py  pyproject.toml
libs/mng_recursive/: README.md  conftest.py  pyproject.toml
libs/mng_schedule/: README.md  conftest.py  pyproject.toml
libs/mng_test_coder/: README.md  conftest.py  pyproject.toml
libs/mng_ttyd/: README.md  conftest.py  pyproject.toml
libs/mng_tutor/: README.md  conftest.py  pyproject.toml
(+2423 files in other folders)
