[project]
name = "imbue"
version = "0.1.0"
description = "Monorepo for Imbue projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-xdist>=3.8.0",
    "ty>=0.0.24",
    "click>=8.0.0",
]

[tool.uv.sources]
imbue-common = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff~=0.12.8",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-split>=0.9.0",
    # really just for debugging slow tests
    "pytest-profiling",
    "line-profiler",
    "import-linter>=2.0",
    "semver>=3.0",
    "tomlkit>=0.12.0",
    "imbue-common[dev]",
]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
# Only timeout the test function itself, not fixtures. This is required because
# --timeout-method=signal sends SIGALRM which kills the entire xdist worker process
# if it fires during fixture setup/teardown (especially the session-scoped cleanup).
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
pythonpath = [
  "apps/*",
  "libs/*",
]
testpaths = [
  "test_meta_ratchets.py",
  "apps/*",
  "libs/*",
  "scripts",
]
addopts = [
  "-n 4",
  "--dist=worksteal",
  "--cov=imbue.mngr",
  "--cov=imbue.imbue_common",
  "--cov=imbue.resource_guards",
  "--cov=imbue.mngr_claude",
  "--cov=imbue.mngr_opencode",
  "--cov=imbue.mngr_pi_coding",
  "--cov=imbue.mngr_pair",
  "--cov=imbue.mngr_schedule",
  "--cov=imbue.mngr_ttyd",
  "--cov=imbue.mngr_tutor",
  "--cov=imbue.mngr_llm",
  "--cov=imbue.mngr_mind",
  "--cov=imbue.mngr_claude_mind",
  "--cov=imbue.mngr_elena_code",
  "--cov=imbue.mngr_kanpan",
  "--cov=imbue.mngr_recursive",
  "--cov=imbue.mngr_notifications",
  "--cov=imbue.mngr_mind_chat",
  "--cov=imbue.mngr_test_coder",
  "--cov=imbue.mngr_file",
  "--cov=imbue.mngr_tmr",
  "--cov=imbue.skitwright",
  "--cov=imbue.minds",
  "--cov=imbue.slack_exporter",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.ruff]
line-length = 119
exclude = [
    "**/__snapshots__/**",
    "scripts/style_guide.py",
    "frpc_test",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
#    "T",
#    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "imbue",
    "imbue_common",
    "mngr",
    "sculptor_desktop",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.ty.src]
exclude = ["scripts/style_guide.py", "scripts/generate_verify_skills.py", "contrib/"]

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.coverage.run]
source = ["imbue"]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/conftest.py",
    # Test utility modules contain helpers only used by tests
    "*/utils/testing.py",
    "*/utils/plugin_testing.py",
    "libs/imbue_common/imbue/imbue_common/ratchet_testing/ratchets.py",
    # Modal provider plugin requires network access for testing
    "libs/mngr_modal/imbue/mngr_modal/*",
    # Docker provider requires a Docker daemon for testing
    "libs/mngr/imbue/mngr/providers/docker/instance.py",
    "libs/mngr/imbue/mngr/providers/docker/volume.py",
    "libs/mngr/imbue/mngr/providers/docker/testing.py",
    # Mind deploy modules run on Modal and require infrastructure to test
    "apps/minds/imbue/minds/deploy/cron_runner.py",
    "apps/minds/imbue/minds/deploy/remote_runner.py",
    "apps/minds/imbue/minds/deploy/verification.py",
    # Schedule plugin cron runner and verification run on Modal and require infrastructure to test
    "libs/mngr_schedule/imbue/mngr_schedule/implementations/modal/cron_runner.py",
    "libs/mngr_schedule/imbue/mngr_schedule/implementations/modal/verification.py",
    # don't bother with anything in scripts
    "scripts/*",
]

[tool.importlinter]
root_package = "imbue"

[[tool.importlinter.contracts]]
name = "mngr layers contract"
type = "layers"
layers = [
    "imbue.mngr.main",
    "imbue.mngr.cli",
    "imbue.mngr.api",
    "imbue.mngr.agents",
    "imbue.mngr.providers",
    "imbue.mngr.hosts",
    "imbue.mngr.plugins",
    "imbue.mngr.interfaces",
    "imbue.mngr.config",
    "imbue.mngr.utils",
    "imbue.mngr.errors",
    "imbue.mngr.primitives",
    "imbue.mngr.resources",
]

[[tool.importlinter.contracts]]
name = "minds layers contract"
type = "layers"
layers = [
    "imbue.minds.desktop_client",
    "imbue.minds.cli",
    "imbue.minds.forwarding_server",
    "imbue.minds.core",
    "imbue.minds.interfaces",
    "imbue.minds.config",
    "imbue.minds.errors",
    "imbue.minds.utils",
    "imbue.minds.primitives",
]
