[project]
name = "claude_web_view"
version = "0.1.0"
description = "Web viewer for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "watchfiles>=0.21.0",
    "pydantic>=2.5.0",
]

[project.scripts]
claude_web_view = "imbue.claude_web_view.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.hatch.build.targets.wheel.shared-data]
"frontend-dist" = "share/claude_web_view/frontend-dist"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
