[project]
name = "minds"
version = "0.1.0"
description = "Specialized AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "imbue-common",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "loguru",
    "mng",
    "mng-claude-mind",
    "modal>=1.3.1",
    "paramiko>=3.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "tomlkit>=0.12.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
]

[project.scripts]
mind = "imbue.minds.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
concurrency-group = { workspace = true }
mng = { workspace = true }
mng-claude-mind = { workspace = true }
imbue-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "-n 4",
  "--dist=worksteal",
  "--cov=imbue.minds",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
