[project]
name = "modal-litellm"
version = "0.1.0"
description = "LiteLLM proxy deployed as a Modal serverless function for cost-tracked Claude API access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm[proxy]>=1.83",
    "modal>=1.3.1",
    "prisma>=0.15",
    "pyyaml>=6.0",
]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py"]
