[project]
name = "sculptor-web"
version = "0.1.0"
description = "Web interface for managing AI coding agents via mngr"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr",
    "python-fasthtml>=0.10.0",
]

[project.scripts]
sculptor-web = "imbue.sculptor_web.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
imbue-mngr = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]

[[tool.importlinter.contracts]]
name = "sculptor_web layers contract"
type = "layers"
layers = [
    "imbue.sculptor_web.main",
    "imbue.sculptor_web.data_types",
    "imbue.sculptor_web.errors",
]
