[project]
name = "flexmux"
version = "0.1.0"
description = "Simple FlexLayout-based tab manager with Flask backend"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.0",
]

[project.scripts]
flexmux = "imbue.flexmux.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]
