[project]
name = "imbue-common"
version = "0.1.4"
description = "Core libraries for Imbue projects"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Imbue"},
    {name = "Josh Albrecht"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0",
    "cowsay-python>=1.0.2",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = ["inline-snapshot>=0.13"]

[project.urls]
Homepage = "https://github.com/imbue-ai/mng"
Repository = "https://github.com/imbue-ai/mng"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/conftest_hooks.py", "**/resource_guards.py", "**/pytest_utils.py", "**/utils/testing.py"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
