[project]
name = "mng"
version = "0.1.4"
description = "Library for managing AI coding agents across different hosts"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Imbue"},
    {name = "Josh Albrecht"},
    {name = "Evan Ryan Gunter"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "imbue-common==0.1.4",
    "cel-python>=0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group==0.1.4",
    "coolname>=3.0.0",
    "cryptography>=42.0",
    "docker>=7.0",
    "dockerfile-parse>=2.0.0",
    # pinning for now because more recent versions break how we gather build logs. See here for an attempt to fix, but it is not confirmed working: https://github.com/imbue-ai/mng/pull/325
    "modal==1.3.1",
    "packaging>=21.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "setproctitle>=1.3",
    "python-dotenv>=1.0",
    "pyinfra>=3.0",
    "pluggy>=1.5.0",
    "tabulate>=0.9.0",
    "tenacity>=8.0",
    "tomlkit>=0.12.0",
    "urwid>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/imbue-ai/mng"
Repository = "https://github.com/imbue-ai/mng"

[project.scripts]
mng = "imbue.mng.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py", "**/plugin_testing.py"]

[tool.uv.sources]
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "-n 4",
  "--dist=worksteal",
  "--cov=imbue.mng",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/testing.py",
  "*/plugin_testing.py",
  "*/providers/modal/*",
  "*/providers/docker/instance.py",
  "*/providers/docker/volume.py",
]

[tool.coverage.report]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/testing.py",
  "*/plugin_testing.py",
  "*/providers/modal/*",
  "*/providers/docker/instance.py",
  "*/providers/docker/volume.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
