[project]
name = "mng"
version = "0.1.8"
description = "Library for managing AI coding agents across different hosts"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Imbue"},
    {name = "Josh Albrecht"},
    {name = "Evan Ryan Gunter"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "imbue-common==0.1.8",
    "resource-guards==0.1.1",
    "cel-python>=0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group==0.1.8",
    "coolname>=3.0.0",
    "cryptography>=42.0",
    # pinning docker because the guard registration module
    # (register_guards_docker.py) monkeypatches its internal methods for test
    # resource guards; new versions may move or rename them.
    "docker==7.1.0",
    "packaging>=21.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "setproctitle>=1.3",
    "python-dotenv>=1.0",
    "pyinfra>=3.0",
    "paramiko>=3.0",
    "pluggy>=1.5.0",
    "pygtail>=0.14.0",
    "tabulate>=0.9.0",
    "tenacity>=8.0",
    "tomlkit>=0.12.0",
    "urwid>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/imbue-ai/mng"
Repository = "https://github.com/imbue-ai/mng"

[project.scripts]
mng = "imbue.mng.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/utils/testing.py", "**/utils/plugin_testing.py"]

[tool.uv.sources]
imbue-common = { workspace = true }
concurrency-group = { workspace = true }
resource-guards = { workspace = true }
# skitwright is used by e2e tests (not a runtime dependency); resolved via workspace

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "-n 4",
  "--dist=worksteal",
  "--cov=imbue.mng",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/testing/*",
  "*/utils/testing.py",
  "*/utils/plugin_testing.py",
  "*/utils/mock_provider.py",
  "*/providers/docker/instance.py",
  "*/providers/docker/volume.py",
  "*/providers/docker/testing.py",
]

[tool.coverage.report]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/testing/*",
  "*/utils/testing.py",
  "*/utils/plugin_testing.py",
  "*/utils/mock_provider.py",
  "*/providers/docker/instance.py",
  "*/providers/docker/volume.py",
  "*/providers/docker/testing.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
