[project]
name = "mng-claude-changeling"
version = "0.1.0"
description = "Claude changeling agent plugin for mng - base class for changeling agents built on Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.4",
    "mng-ttyd==0.1.0",
    "watchdog>=4.0",
]

[project.entry-points.mng]
claude_changeling = "imbue.mng_claude_changeling.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }
mng-ttyd = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
