[project]
name = "mng-elena-code"
version = "0.1.0"
description = "Elena Code agent plugin for mng - a conversational AI changeling powered by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.4",
    "mng-claude-zygote==0.1.0",
]

[project.entry-points.mng]
elena_code = "imbue.mng_elena_code.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }
mng-claude-zygote = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
